--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,15 @@
 <button mat-raised-button (click)="removeColumn()"> Remove column </button>
 <button mat-raised-button (click)="shuffle()"> Shuffle </button>
 
+
+<mat-form-field>
+  <mat-label>Columns</mat-label>
+  <mat-select [formControl]="columns" multiple (selectionChange)="columnSelected($event)">
+    <mat-option *ngFor="let column of columnList" [value]="column">{{column}}</mat-option>
+  </mat-select>
+</mat-form-field>
+
+
 <table mat-table [dataSource]="data" class="mat-elevation-z8">
   <ng-container [matColumnDef]="column" *ngFor="let column of displayedColumns">
     <th mat-header-cell *matHeaderCellDef> {{column}} </th>
